tests/unit/language/overloads/unknown_member_errors.arche
// RUN: ! %arche -o %t %s 2>&1

func a(x: int) -> int {
  return x;
}
func g = {
  a, missing
}
;
// error: unknown member 'missing' in group 'g'
